--- a/src/app/view-profile/view-profile.component.html
+++ b/src/app/view-profile/view-profile.component.html
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                   <div class="card-footer">MadeBy &nbsp;
-                   joshigj15@gmail.com  
+                   prakashdhakar8233@gmail.com  
                    
                    <a class="btn btn-danger" routerLink='/dashboard'>Go Back</a>
                 </div>
